Added Torsten to Authors

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -53,6 +53,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
+<h1>Currently Active developers</h1>
 <h2>John Adcock</h2>
 
 <blockquote>
@@ -63,6 +64,45 @@ He coded the world's first real-time software 3:2 pulldown software deinterlacer
 video-material deinterlacers that are superior to those in
 virtually any other any PC-based video software product.</p>
 </blockquote>
+
+<h2>Laurent Garnier</h2>
+
+<blockquote>
+<p>In his time off from being confused with the similarly named French DJ, Laurent 
+has been very busy adding some of the coolest new features in recent 
+releases: auto-calibration, the OSD (On Screen Display), WSS (WideScreen 
+Signalling), stills source and patterns.</p>
+</blockquote>
+
+<h2>Torbj&ouml;rn Jansson</h2>
+
+<blockquote>
+<p>Added the new generic settings dialog and has provided many
+bug fixes</p>
+</blockquote>
+
+<h2>Rob Muller</h2>
+
+<blockquote>
+<p>Rob has quickly established himself as a core part of the team.  
+He has fixed problems all over the code and also provided the new setup routine.</p>
+</blockquote>
+
+<h2>Atsushi Nakagawa</h2>
+
+<blockquote>
+<p>Atsushi added support for Philips' SAA7130/4 based cards. He is now one of the
+driving forces behind the project.</p>
+</blockquote>
+
+<h2>Torsten Seeboth</h2>
+
+<blockquote>
+<p>Torsten keeps himself busy getting the cx2388x cards working properly, 
+he is the main reason any of these cards work.</p>
+</blockquote>
+
+<h1>Previous Contributors</h1> 
 
 <h2>Mark Rejhon</h2>
 
@@ -116,22 +156,6 @@ Macrovision-encoded sources watchable in DScaler, without
 purple-lines interference.</p>
 </blockquote>
 
-<h2>Laurent Garnier</h2>
-
-<blockquote>
-        <p>In his time off from being confused with the similarly named French DJ, Laurent 
-          has been very busy adding some of the coolest new features in recent 
-          releases: auto-calibration, the OSD (On Screen Display), WSS (WideScreen 
-          Signalling), stills source and patterns.</p>
-</blockquote>
-
-<h2>Torbj&ouml;rn Jansson</h2>
-
-<blockquote>
-<p>Added the new generic settings dialog and has provided many
-bug fixes</p>
-</blockquote>
-
 <h2>Eric Schmidt</h2>
 
 <blockquote>
@@ -163,18 +187,6 @@ alter ego "Hermes Conrad".</p>
 <p>Added support for overlay colour controls.</p>
 </blockquote>
 
-<h2>Rob Muller</h2>
-
-<blockquote>
-<p>Rob has quickly established himself as a core part of the team.  He has fixed problems all over the code and also provided the new setup routine.</p>
-</blockquote>
-
-<h2>Atsushi Nakagawa</h2>
-
-<blockquote>
-<p>Atsushi added support for Philips' SAA7130/4 based cards. He is now one of the
-driving forces behind the project.</p>
-</blockquote>
 
 <p>Please see the <a href="Thanks.htm">Thanks</a> file for an
 incomplete list of the many others who have contributed time and
