--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -117,7 +117,7 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 
 <li>Robert Schlabbach for several patches and eye for detail.</li>
 
-<li>Torsten Seeboth and Lavrenov Dmitrij for sorting out issues with CX2388x sound.</li>
+<li>Lavrenov Dmitrij for sorting out issues with CX2388x sound.</li>
 
 <li>Sven Grothklags for audio patches.</li>
 
