Doc updated with new stills keyboard shortcut

--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -1209,10 +1209,42 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
+            <p><small>Save Still</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+S</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Close Still</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+C</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
             <p><small>Take Still Picture</small></p>
           </td>
           <td valign="bottom"> 
             <p><small>L</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Take Periodic Still Picture</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+L</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Take Consecutive Still Picture</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Alt+L</small></p>
           </td>
         </tr>
         <tr> 
