Prep for release

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,22 +54,68 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.11</h1>
+<h1>DScaler - version 4.1.12</h1>
 
-<p>What's new (since 4.1.10):<br>
-<ul>
-<li>Nothing new</li>
+<h2>What's new (since 4.1.11):</h2>
+<h3>General</h3>
+<p><ul>
+<li>Extra still shortcuts, Ctrl+C to close a still and Ctrl+S to save<./li>
+<li>CC Fixes</li>
+</ul></p>
+<h3>SAA713x cards</h3>
+<p><ul>
+<li>Card definitions stored in ini file (see SAA713xCards.ini) that can
+be configured by users to ease the addition of new cards.</li>
+</ul></p>
+<h3>cx2388x cards</h3>
+<p><ul>
+<li>Card definitions stored in ini file (see CX2388xCards.ini) that can
+be configured by users to ease the addition of new cards.</li>
+<li>Added support for more audio modes (PAL-I FM mono & Secam-L AM Mono)</li>
+<li>Autodetect TEA5767 chip</li>
 </ul></p>
 
-<p>What's Improved</p>
+<h2>What's Improved</h2>
+<h3>General</h3>
+<p><ul>
+<li>Teletext goto dialog appears correctly with luna theme</li>
+</ul></p>
+<h3>bt8x8 cards</h3>
+<p><ul>
+<li>New card definitions:<BR>
 <ul>
-<li>More Fixes for audio with CX2388x cards</li>
-<li>Fixes for some XP2 audio bugs with with bt8x8 cards</li>
-<li>A few other minor bug fixes</li> 
+<li>Hercules Smart TV Stereo</li>
+</ul></li>
+</ul></p>
+<h3>SAA713x cards</h3>
+<p><ul>
+<li>New card definitions:<BR>
+<ul>
+<li>Snazio TVPVR</li>
+<li>Terratec Cinergy 200 TV</li>
+<li>Empire PCI TV-Radio LE</li>
+<li>AverMedia AverTV Studio 307</li>
+<li>Added Compro VideoMate TV Gold Plus II</li>
+<li>FOTOCOM TV ONE XP</li>
+<li>Medion MD-42073</li>
+<li>V-Stream Xpert-TV PVR-7134</li>
+</ul></li>
+<li>Audio problem with Pinnacle PCTV Stereo should now be fixed.</li>
+<li>Tuning problem with Compro VideoMate Gold Plus II should be</li>
+fixed.</li>
+<li>Audio AGC for the Medion 7134 MK2/3 card is now enabled.</li>
+</ul></p>
+<h3>cx2388x cards</h3>
+<p><ul>
+<li>New card definitions:
+<ul>
+<li>AverTV303</li>
+<li>WinFast TV2000 XP Expert</li>
+</ul></li>
 </ul></p>
 
-<p>What's Experimental:
-<ul>
+<h2>What's Experimental:</h2>
+<p><ul>
 <li>PowerStrip modeline option when changing resolution in the
    full screen mode</li>
 <li>DirectShow support for tuners and file</li>
