Added 'Zoom Off'.

--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -933,6 +933,14 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
+            <p><small>Zoom Off</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+Alt+Z</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
             <p><small>Shift Image Left</small></p>
           </td>
           <td valign="bottom"> 
