Added Alex Perez for TDA8275 debugging.

--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -58,10 +58,10 @@ height="2"></td>
 
 <p>The DScaler team would like to express their gratitude to:</p>
 <ul>
-<li>All the <a href="Authors.htm">authors</a> who have contributed 
+<li>All the <a href="Authors.htm">authors</a> who have contributed
 code to the project.</li>
 
-<li>Expresso for creating multidec the foundation of DScaler. 
+<li>Expresso for creating multidec the foundation of DScaler.
 <a href="Thanks_MultiDec.txt">MultiDec's thanks.</a></li>
 
 <li>Mathias Ellinger for the driver from FreeTV on which DScaler's driver is based.</li>
@@ -95,7 +95,7 @@ method.</li>
 Purdila, Vladimir Dergachev and Christian Lupien&#151;the GATOS
 developers&#151;for the original screen capture code.</li>
 
-<li>Jim Ferguson for his ground breaking YXY tool, the model and benchmark 
+<li>Jim Ferguson for his ground breaking YXY tool, the model and benchmark
 for aspect ratio support.</li>
 
 <li>Gerd Knorr for the "v4l2/OSS device driver for saa7130/34" on which DScaler's saa713x
@@ -122,6 +122,8 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 <li>Sven Grothklags for audio patches.</li>
 
 <li>"e-nek" for the major help in testing and debugging of SAA7133/5 support.</li>
+
+<li>Alex Perez for testing and help debugging the TDA8290 + TDA8275 tuner.</li>
 
 <li>Everybody on the deinterlace project mailing list.</li>
 </ul>
