Messing around with different formats

--- a/htdocs/card-support/New_card_support_page.htm
+++ b/htdocs/card-support/New_card_support_page.htm
@@ -16,6 +16,9 @@ ol {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 blockquote {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
+td   {font:8pt/12pt verdana,arial,helvetica,sans-serif;color:#666666;}
+tbl {font:8pt/12pt verdana,arial,helvetica,sans-serif; border:1px solid #E3E3E3;}
+
 -->
 </style>
 </head>
@@ -40,23 +43,22 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>DScaler 4 supports capture cards in two ways:  (1) Native support, whereby DScaler
-        takes direct control of the card to perform needed functions; and (2) WDM driver support,
-        whereby DScaler relies on the card manufacturer's WDM driver to perform needed functions.
-        
-        Below is a list of capture cards that are natively supported by DScaler 4, in alphabetical
-        order.  If your card is not natively supported by DScaler 4, you may still be able to
+      <p>DScaler 4 supports capture cards in two ways: (1) Native support, whereby 
+        DScaler takes direct control of the card to perform needed functions; 
+        and (2) WDM driver support, whereby DScaler relies on the card manufacturer's 
+        WDM driver to perform needed functions. Below is a list of capture cards 
+        that are natively supported by DScaler 4, in alphabetical order. If your 
+        card is not natively supported by DScaler 4, you may still be able to 
         use DScaler's WDM driver support, as described above.
       <p><br>
-      </p>
-      <table width="600" border="0" cellspacing="0" cellpadding="0" align="left">
+      <table width="600" border="0" cellspacing="0" cellpadding="0" align="left" class="tbl">
         <tr> 
           <td width="400"><img src="../images/spacer.gif" width="400" height="1"></td>
           <td width="200" height="1"><img src="../images/spacer.gif" width="200" height="1"></td>
         </tr>
         <tr>
-          <td width="400">Card Name</td>
-          <td width="200">Chipset</td>
+          <td width="400" bgcolor="#DDDDDD"><b>Card Name</b></td>
+          <td width="200" bgcolor="#DDDDDD"><b>Chipset</b></td>
         </tr>
         -Automated Insert-
       </table>
