--- a/htdocs/card-support/New_card_support_page.htm
+++ b/htdocs/card-support/New_card_support_page.htm
@@ -16,7 +16,7 @@ ol {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 blockquote {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
-.cell {font:8pt/12pt verdana,arial,helvetica,sans-serif}
+.cell {font:8pt/12pt verdana,arial,helvetica,sans-serif; border:1px solid #E3E3E3;}
 .table {font:8pt/12pt verdana,arial,helvetica,sans-serif; border:1px solid #E3E3E3;}
 
 -->
