--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -67,6 +67,7 @@ height="2"></td>
 <h2>What's Improved</h2>
 <h3>General</h3>
 <p><ul>
+<li>MassiveImprovements to time shift code.</li>
 <li>Lots of stability improvements.</li>
 <li>Lots of minor bugs fixed.</li>
 </ul></p>
