--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,7 +54,14 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.13</h1>
+<h1>DScaler - version 4.1.14</h1>
+
+<h2>What's new (since 4.1.13):</h2>
+<h3>General</h3>
+<p><ul>
+<li>Fixes for crashing problems with timeshift on fresh install</li>
+<li>Should work on win98 again</li>
+</ul></p>
 
 <h2>What's new (since 4.1.12):</h2>
 <h3>General</h3>
@@ -67,7 +74,7 @@ height="2"></td>
 <h2>What's Improved</h2>
 <h3>General</h3>
 <p><ul>
-<li>MassiveImprovements to time shift code.</li>
+<li>Massive improvements to time shift code.</li>
 <li>Lots of stability improvements.</li>
 <li>Lots of minor bugs fixed.</li>
 </ul></p>
