prepare for release

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,44 +54,26 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.14</h1>
+<h1>DScaler - version 4.1.15</h1>
 
-<h2>What's new (since 4.1.13):</h2>
+<h2>What's new (since 4.1.14):</h2>
 <h3>General</h3>
 <p><ul>
-<li>Fixes for crashing problems with timeshift on fresh install</li>
-<li>Should work on win98 again</li>
+<li>Should work on win98 (really this time)</li>
 </ul></p>
 
-<h2>What's new (since 4.1.12):</h2>
-<h3>General</h3>
-<p><ul>
-<li>Initial XMLTV and EPG support</li>
-<li>Basic support for MCE remotes</li>
-<li>New tuners added</li>
-</ul></p>
 
 <h2>What's Improved</h2>
 <h3>General</h3>
 <p><ul>
-<li>Massive improvements to time shift code.</li>
-<li>Lots of stability improvements.</li>
-<li>Lots of minor bugs fixed.</li>
-</ul></p>
-<h3>SAA713x cards</h3>
-<p><ul>
-<li>New card definitions:<BR>
-<ul>
-<li>Terratec Cinergy 400 Mobile</li>
-</ul>
+<li>EPG improvements.</li>
 </ul></p>
 <h3>cx2388x cards</h3>
 <p><ul>
 <li>New card definitions:
 <ul>
-<li>GDI Black Gold</li>
-<li>IODATA GV-VCP3/PCI</li>
-<li>IODATA GV/BCTV7E</li>
+<li>10Moon TVBaby3</li>
+<li>Added new Cards from v4l2 - not tested</li>
 </ul></li>
 </ul></p>
 
