prepare for release

--- a/DScaler5/Help/News.htm
+++ b/DScaler5/Help/News.htm
@@ -54,17 +54,16 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler 5 - version 0.0.5</h1>
+<h1>DScaler 5 - version 0.0.6</h1>
 
 <p>What's new:<br>
 <ul>
-<li>Nothing new</li>
+<li>Preliminary support for NV12 for improved deinterlacing on Radeon cards.</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>Lots of bug fixes especially for reconnection.</li>
-<li>Removed buffering which should improve the stuttering on some machines.</li>
+<li>Not a lot.</li>
 </ul></p>
 
 <p>What's not working:
