prep for new version

--- a/DScaler5/Help/MpegVideo.htm
+++ b/DScaler5/Help/MpegVideo.htm
@@ -115,7 +115,8 @@ height="2"></td>
           <td>Colour space to output</td>
           <td>YUY2</td>
           <td>Allows the user to choose the output colour space. YV12 can be used for 
-					progressive (i.e. film material).</td>
+					progressive (i.e. film material) and NV12 works well with Radeon video 
+					deinterlacing</td>
         </tr>
       </table>
 			</p>
