updated download page to point only to 4.1.15

--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -57,10 +57,22 @@ width="100%" height="2"></td>
 confusing.  Below we will list the releases that have been passed though a
 test cycle on the main developer list.  A full list of all releases can be seen
 <a href="http://sourceforge.net/project/showfiles.php?group_id=7420">here</a>.
-For most users we recommend installing whatever version is at the top of this list.  
-If you have serious problems with it then revert back to the last release marked as stable.</p>
+For most users we recommend installing whatever version is at the top of this list.</p>
+
+<p>Version 4.1.15&#151;<b>Stable</b>&#151;[<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler4115.exe">Setup Program</a>] [<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler4115src.zip">Source Zipped</a>]</p>
+<ul>
+<li>Improved stability, lots of bug fixes</li> 
+<li>Card definitions stored in ini files</li> 
+<li>Lots of new cx2388x and saa713a cards</li> 
+<li>XMLTV EPG support</li> 
+<li>Fixes some XP2 issues with bt8x8</li>
+<li>Basic support for MCE remotes</li> 
+</ul>
+
    
-<p>Version 4.1.11&#151;<b>Beta</b>&#151;[<a href=
+<p>Version 4.1.11&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler4111.exe">Setup Program</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler4111src.zip">Source Zipped</a>]</p>
 <ul>
@@ -97,141 +109,6 @@ If you have serious problems with it then revert back to the last release marked
 <li>New setup program with uninstall</li>
 <li>Lots of other changes and fixes</li> 
 </ul>
-
-<p>Version 3.1.0&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/DScaler310exe.zip">
-Binary Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/DScaler310src.zip">
-Source Zipped</a>] [<a href=
-"readme/DScaler_Readme310.htm">README</a>]</p>
-
-<ul>
-<li>Massive improvements to 2:2 pulldown detection.</li>
-
-<li>Improvements to 3:2 pulldown detection on material with bad
-cadence. (this is much more CPU intensive than before)</li>
-
-<li>New mixer control for users not bypassing the PC with
-sound.</li>
-
-<li>Channel editing with fine tuning</li>
-
-<li>New UI support for all most ini file settings</li>
-
-<li>Greedy 2 frame improved</li>
-
-<li>Overlay fixes</li>
-
-<li>Laurent's Auto-Calibration</li>
-
-<li>Experimental Time-shifting support</li>
-
-<li>Improved auto-aspect ratio detect</li>
-
-<li>Auto-format detection (switches between PAL and NTSC by
-default)</li>
-
-<li>Updated Linear Correction Filter with alpha non-linear zoom
-mode</li>
-
-<li>Improved Sound support</li>
-
-<li>Additional card support</li>
-
-<li>Teletext improvements</li>
-
-<li>NTSC50 mode for Chris Williams</li>
-
-<li>Always on top full screen flag</li>
-
-<li>Gamma filter fixed</li>
-
-<li>Various Bug Fixes</li>
-
-<li>Additional code pages for teletext</li>
-
-<li>More flexible zoom and positioning</li>
-
-<li>Alpha Logo Killer plug-in</li>
-
-<li>Alpha Sharpness Filter</li>
-
-<li>Tom Barry's new all-singing all-dancing Greedy High Motion
-plugin</li>
-
-<li>Increased range of contrast and saturation</li>
-
-<li>Lindsey Dubb's Old Game method & Temporal comb filter</li>
-
-<li>Added PAL-NC mode for Argentina</li>
-</ul>
-
-<p>Version 2.3.0&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/DScaler230exe.zip">
-Binary Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/DScaler230src.zip">
-Source Zipped</a>] [<a href=
-"readme/DScaler_Readme230.htm">README</a>]</p>
-
-<ul>
-<li>Plug-in architecture</li>
-
-<li>Judder reduction</li>
-
-<li>New Greedy 2 Frame method (good for sports)</li>
-
-<li>Gamma filter</li>
-
-<li>Option to save settings per format/source</li>
-
-<li>WSS decoding for Pal and Secam sources</li>
-
-<li>Use of aspect ratio WSS data</li>
-
-<li>3 screens of Information using OSD (general screen,
-statistics screen and WSS data decoding screen)</li>
-
-<li>Autohide cursor feature</li>
-
-<li>Popup menu - right click in window</li>
-
-<li>New menu with direct access to all channels</li>
-
-<li>Command to go to the last viewed channel</li>
-
-<li>Single click replaced by double click to switch between
-window mode and fullscreen mode</li>
-
-<li>Option to save last used video format per video input</li>
-
-<li>Zoom feature - still experimental</li>
-
-<li>Adjustable window position</li>
-
-<li>Orbiting &amp; Bounce</li>
-
-<li>CC support - experimental - lots of known problems</li>
-
-<li>Teletext support - experimental - lots of known problems</li>
-</ul>
-
-<p>Version 2.1.2&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV212exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV212src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]</p>
-
-<ul>
-<li>Advanced flags fixes </li>
-
-<li>Mpact2 24 bit mode fix (works but you can't see menu or
-OSD)</li>
-
-<li>Tuner menu option fix.</li>
-</ul>
-
-<p>Version 2.1.1 &amp; before &#151;<b>Superceeded</b>&#151;</p>
-<p><a href="News.htm">See older news</a></p>
 
 <!-- #EndEditable --> 
 </td>
