--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -79,7 +79,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 			<h2>What do others say about DScaler?</h2>
 
 			<p>We maintain a list of reviews and articles about DScaler 
-			<a href="reviews/index">here</a>.</p>
+			<a href="reviews/index.htm">here</a>.</p>
 			
 			<a name="dscaler4"></a>
 			<h2>DScaler 4</h2>
