--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,29 +54,39 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.15</h1>
+<h1>DScaler - version 4.1.16</h1>
 
-<h2>What's new (since 4.1.14):</h2>
+<h2>What's new (since 4.1.15):</h2>
+
 <h3>General</h3>
 <p><ul>
-<li>Should work on win98 (really this time)</li>
+<li>Support for 64 bit OSes</li>
+<li>Preliminary support of displaying on DirectX surface for systems without overlay.</li>
+<li>Support for compilation under VS 2005</li>
+<li>Added more skins to install package</li>
+<li>Should work on win98 (really really this time :) )</li>
 </ul></p>
 
 
 <h2>What's Improved</h2>
 <h3>General</h3>
 <p><ul>
-<li>EPG improvements.</li>
+<li>Lots of bug fixes</li>
 </ul></p>
 <h3>cx2388x cards</h3>
 <p><ul>
 <li>New card definitions:
 <ul>
-<li>10Moon TVBaby3</li>
 <li>Added new Cards from v4l2 - not tested</li>
 </ul></li>
 </ul></p>
-
+<h3>bt8x8 cards</h3>
+<p><ul>
+<li>New card definitions:
+<ul>
+<li>Curtiss-Wright cards</li>
+</ul></li>
+</ul></p>
 <h2>What's Experimental:</h2>
 <p><ul>
 <li>PowerStrip modeline option when changing resolution in the
