Project/header fixes prior to release

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,17 +54,13 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.16</h1>
+<h1>DScaler - version 4.1.17</h1>
 
-<h2>What's new (since 4.1.15):</h2>
+<h2>What's new (since 4.1.16):</h2>
 
 <h3>General</h3>
 <p><ul>
-<li>Support for 64 bit OSes</li>
-<li>Preliminary support of displaying on DirectX surface for systems without overlay.</li>
-<li>Support for compilation under VS 2005</li>
-<li>Added more skins to install package</li>
-<li>Should work on win98 (really really this time :) )</li>
+<li>Signed Drivers for full support on 64bit OSes </li>
 </ul></p>
 
 
@@ -72,19 +68,20 @@ height="2"></td>
 <h3>General</h3>
 <p><ul>
 <li>Lots of bug fixes</li>
+<li>Better Vista Support</li>
 </ul></p>
 <h3>cx2388x cards</h3>
 <p><ul>
 <li>New card definitions:
 <ul>
-<li>Added new Cards from v4l2 - not tested</li>
+<li>None</li>
 </ul></li>
 </ul></p>
 <h3>bt8x8 cards</h3>
 <p><ul>
 <li>New card definitions:
 <ul>
-<li>Curtiss-Wright cards</li>
+<li>None</li>
 </ul></li>
 </ul></p>
 <h2>What's Experimental:</h2>
