removed upper case extensions from all files

--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -176,7 +176,7 @@ href="http://www.dscaler.org/downloads.htm">download page</a></p>
         Linux no <i>if you want to do a port <a href="#HELP">contact us</a></i><br>
         OS/2 definitely no ;-)</p>
       <h2>What are all those deinterlace algorithms ?</h2>
-      <p>Look for a detailed description in the <a href="Help/Deinterlace.HTM">online 
+      <p>Look for a detailed description in the <a href="Help/Deinterlace.htm">online 
         help file</a>.</p>
       <h2>Can I <i>remote control</i> DScaler ? <b>YES</b></h2>
       <p>Yes you can. DScaler is being developped mainly by people using it as 
