--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -239,7 +239,7 @@ page</a></p>
       <p>John Adcock's <a target="_blank" href=
 "http://www.dscaler.org/palmovie/index.htm">PALMovie deinterlace plugin</a> for 
         bTV.</p>
-      <p>An explanation of the <a href="IniFile.HTM">options available</a> in 
+      <p>An explanation of the <a href="IniFile.htm">options available</a> in 
         the DScaler.ini file.</p>
       <p>Conexant's <a href=
 "http://www.dscaler.org/distributions/btregtools.zip">Bt 8x8 register tools</a> 
