--- a/htdocs/readme/DScaler_Readme230.htm
+++ b/htdocs/readme/DScaler_Readme230.htm
@@ -131,7 +131,7 @@ for whichever operating system you are running.</font></p>
 
 <p><a href="../32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
 
-<p><a href="../IniFile.HTM">Ini File Settings</a></p>
+<p><a href="../IniFile.htm">Ini File Settings</a></p>
 
 <p><a href="../keyboard.htm">Keyboard Shortcuts</a></p>
 
