--- a/htdocs/readme/DScaler_Readme310.htm
+++ b/htdocs/readme/DScaler_Readme310.htm
@@ -118,7 +118,7 @@ for whichever operating system you are running.</p>
 
 <p><a href="Thanks310.htm">Thanks</a></p>
 
-<p><a href="IniFile310.HTM">Ini File Settings</a></p>
+<p><a href="IniFile310.htm">Ini File Settings</a></p>
 
 <p><a href="keyboard310.htm">Keyboard Shortcuts</a></p>
 
