--- a/htdocs/readme/dTV_Readme107.htm
+++ b/htdocs/readme/dTV_Readme107.htm
@@ -50,7 +50,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         for developers<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Improved the appearance of About screen, 
         added more credits<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Documentation (.HTM files) moved into separate 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Documentation (.htm files) moved into separate 
         subdirectory<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: No TV tuner card related bugfixes 
         over 1.6; see <a href="../bugs/Bugs_107.htm">Known Bugs</a> for current list
