--- a/htdocs/readme/dTV_Readme2110.htm
+++ b/htdocs/readme/dTV_Readme2110.htm
@@ -112,7 +112,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p align="left"><a href="../Thanks.htm">Thanks</a></p>
       <p align="left"><a href="../user_support.htm">Support</a></p>
       <p><a href="../32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
-      <p><a href="../IniFile.HTM">Ini File Settings</a></p>
+      <p><a href="../IniFile.htm">Ini File Settings</a></p>
       <p><a href="../keyboard.htm"> Keyboard Shortcuts</a></p>
       <p>&nbsp;</p>
       <H2>Enjoy!</H2>
