--- a/htdocs/francais/FAQ.htm
+++ b/htdocs/francais/FAQ.htm
@@ -176,7 +176,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         OS/2 definitivement non ;-) 
       <h2>En quoi consistent tous ces algorithmes de d&eacute;sentrelacement ?</h2>
       <p>Vous trouverez une description d&eacute;taill&eacute;e de ceux ci dans 
-        <a href="Help/Deinterlace.HTM">l'aide en ligne</a>.
+        <a href="Help/Deinterlace.htm">l'aide en ligne</a>.
       <p> 
       <h2>Puis je contrôler à distance DScaler ? <b>OUI</b></h2>
       <p> Absolument. DScaler a été développé principalement par des personnes 
