removed upper case extensions from all files

--- a/DScaler/Help/AdaptiveNoise.htm
+++ b/DScaler/Help/AdaptiveNoise.htm
@@ -210,7 +210,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             has seen a clean signal from another source. But with
             certain kinds of heavy interference, the filter
             will <EM>never</EM> be able to figure out the noise
-            level. In that case, the <A HREF="Noise.HTM">Temporal
+            level. In that case, the <A HREF="Noise.htm">Temporal
             Noise</A> filter is probably your best bet.
           </P>          <P>
             <B><FONT FACE="Arial" COLOR="#993300">
@@ -403,7 +403,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             A fourth choice is an option hidden in the <A HREF=
-            "GreedyH.HTM">Greedy (High Motion)</A>
+            "GreedyH.htm">Greedy (High Motion)</A>
             deinterlacing method. One of its abilities is
             a median filter, which works well for mild noise
             reduction with minimal harm to the picture. It
