--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -119,7 +119,7 @@ for whichever operating system you are running.</p>
 
 <p><a href="Thanks.htm">Thanks</a></p>
 
-<p><a href="IniFile.HTM">Ini File Settings</a></p>
+<p><a href="IniFile.htm">Ini File Settings</a></p>
 
 <p><a href="keyboard.htm">Keyboard Shortcuts</a></p>
 
