--- a/DScaler/Help/Developer.htm
+++ b/DScaler/Help/Developer.htm
@@ -134,7 +134,7 @@ deinterlace plugin</a> for bTV.</p>
 Video Demystified</a> dealing with the PAL, NTSC, and SECAM
 standards as well as Teletext and Closed-Captioning.</p>
 
-<p>An explanation of the <a href="IniFile.HTM">options
+<p>An explanation of the <a href="IniFile.htm">options
 available</a> in the DScaler.ini file.</p>
 
 <p>Conexant's <a href=http://www.dscaler.org/distributions/btregtools.zip">Bt 8x8
