--- a/DScaler/Help/OldGame.htm
+++ b/DScaler/Help/OldGame.htm
@@ -69,8 +69,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             More exactly, this method assumes that you&rsquo;re looking at a progressive half
             vertical resolution image. So any video source which fits that description should work
-            well. The Old Game method is similar to <A HREF="OddOnly.HTM">Odd Scanlines Only</A> and <A
-            HREF="EvenOnly.HTM">Even Scanlines Only</A>, but improves the picture in a couple ways.
+            well. The Old Game method is similar to <A HREF="OddOnly.htm">Odd Scanlines Only</A> and <A
+            HREF="EvenOnly.htm">Even Scanlines Only</A>, but improves the picture in a couple ways.
             First, it works well with material running at any FPS (frames per second) rate, instead of just
             25 or 30 FPS. Second, it optionally uses averaging between frames to reduce noise and
             color crosstalk. The averaging works well alone or along with a noise filter.
@@ -80,7 +80,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             interlaced output, and will look lousy with this deinterlacing method. (Well, some
             of them allow progressive output, too, but not in a way the supported input cards can
             understand.) To play them on your computer, use the more standard <A HREF=
-            "Deinterlace.HTM">deinterlacing methods</A>&nbsp;&mdash; or better yet, find a VGA adaptor.
+            "Deinterlace.htm">deinterlacing methods</A>&nbsp;&mdash; or better yet, find a VGA adaptor.
             The Super Nintendo, PlayStation, Nintendo 64, and Saturn can also use an
             interlaced mode. The PlayStation uses interlaced mode for its startup logo, for
             example. But almost all games switch back into progressive half vertical resolution
@@ -99,7 +99,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             There&rsquo;s a bug in some older Matrox overlay drivers which allows the <A HREF=
-            "ScalerBob.HTM">Scaler Bob</A> method to work nearly as well as Old Game for progressive
+            "ScalerBob.htm">Scaler Bob</A> method to work nearly as well as Old Game for progressive
             half vertical resolution video. It doesn&rsquo;t use averaging to reduce noise, but it
             should run a little faster. On the other hand, Old Game is fast enough to run just fine on any
             computer supported by DScaler, so that doesn&rsquo;t really get you much.
