--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -311,7 +311,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             Note that this filter is not in any way related to &ldquo;comb&rdquo; in the sense used by many
             video folks! It&rsquo;s not supposed to reduce weave artifacts (lagging horizontal lines) at
-            all. For that, you need to take a look at the <A HREF="Deinterlace.HTM">deinterlacing
+            all. For that, you need to take a look at the <A HREF="Deinterlace.htm">deinterlacing
             methods</A>.
           </P>
           <HR>
