--- a/DScaler/Help/Install.htm
+++ b/DScaler/Help/Install.htm
@@ -116,7 +116,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p><br>
         For more information about the advanced features available via the DScaler.ini 
         file, please see the <a href=
-"IniFile.HTM">.ini documentation</a>.</p>
+"IniFile.htm">.ini documentation</a>.</p>
       <h2><br>
         What if That Doesn't Work?</h2>
       <p><a href=
